# ROPE_Framework

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  ClientDemo.ini  DemoCpp.sh  Dockerfile  Dockerfile.prebuilt  NOTICE-MACOS.md  README.md  ServerDemo.ini  act-build.sh  build.sh  export_models.py  get-ort-libs.sh  launch.sh  main.py  package.sh  preprocess_sw_all_drivers_v2.ipynb  rope.py  rope_dev.yml  run.sh
.github/workflows/: _build-linux.yml  _build-macos.yml  _build-windows.yml  build.yml  cleanup.yml  release.yml
_scripts/: build_demo_SINDYc_model.py
cmake/: Dependencies.cmake  physics_prediction_config.cmake.in  version.h.in
config/: forecast_job.conf  rope.conf  rope.conf.in
data/: coae_test.yaml  decoder.onnx  decoder.onnx.data  encoder.onnx  encoder.onnx.data  predictor.onnx  predictor.onnx.data
demo/: .gitignore  README.md  benchmark.ipynb  install.bat  install.sh  integrate_orbit.py  pyproject.toml  reentry_test.py  rope.conf  run_benchmark.bat  run_benchmark.sh  run_demo.sh  sensitivity.py
demo/demo_lib/: .sw_cache_recent.pkl  __init__.py  perturbations.py  space_weather.py
demo/tests/: test_basic.py
dotnet/: Rope.cs  Rope.csproj  RopeFramework.targets
dotnet-legacy/: Rope.cs  Rope.csproj
examples/: CMakeLists.txt  custom_models.cpp  drivers_predictor_decoder.cpp  forecast.cpp
exported/: base_model_01.onnx  base_model_02.onnx  base_model_03.onnx  base_model_05.onnx  base_model_06.onnx  base_model_07.onnx  base_model_08.onnx  base_model_09.onnx  base_model_10.onnx  base_model_11.onnx  base_model_12.onnx  base_model_13.onnx  base_model_14.onnx  meta_model.onnx
forecast/: IO.py  connector.py  dimensions.py  driver.py  encoders.py  forecaster.py  manager.py  models.py  utils.py
include/: driver_window.hpp  interpolator.hpp  libtorch_model.hpp  model_factory.hpp  model_interface.hpp  onnx_model.h  onnx_model.hpp  physics_pipeline.h  physics_prediction.h  prediction_model.h  rope.hpp  rope_types.hpp  sequence_builder.hpp  utilities.h
include/rope/capi/: rope.h
include/rope/client/: client.h
include/rope/core/: datetime.h  export.h  platform.h  types.h
include/rope/forecast/: pipeline.h
include/rope/interpolate/: grid_interpolator.h
include/rope/io/: config_reader.h  csv_reader.h  driver_bin.h  driver_cache.h  driver_config.h  driver_db.h  ic_bin.h  ic_config.h  ic_table.h  stats.h
include/rope/server/: server.h
legacy/include/: dynamic_rollout.hpp  ic_table.hpp  io.hpp  latent_decoder.hpp  libtorch_model.hpp  meta_model.hpp  model_factory.hpp  model_interface.hpp  normalizer.hpp  rope.hpp  utils.hpp
legacy/scripts/: entrypoint.sh
legacy/src/: driver.cpp  rope.cpp
pyrope/: connector.py  forecaster.py  models.py  transformers.py  utils.py
python/: _meta.py  models.py  pyproject.toml  rope.py  transformers.py
scripts/: DemoPy.py  DeployDemo.sh  _export.py  build-and-test-linux.sh  decoder.onnx  decoder.onnx.data  encoder.onnx  encoder.onnx.data  export_example.py  onnx_exporter.py  predictor.onnx  predictor.onnx.data  preprocess_sw.py  run_forecast.sh
src/: a.out  densityModels.cpp  densityModels.h  driver.cpp  interpolator.cpp  lorentz.json  modelEnsembles.cpp  ode.out  onnx_model.cpp  output.txt  pca.cpp  physics_pipeline.cpp  prediction_model.cpp  results.txt  rope.cpp  sindy.cpp  sindy.h  sindyFeatures.cpp  sindyFeatures.h  spaceWeatherDrivers.cpp  spaceWeatherDrivers.h  stateVariables.cpp  stateVariables.h  swDrivers.cpp  swDrivers.h  utilities.cpp  variables.cpp  vectorSpaces.h
src/LSTM/: COAE.cpp  COAE.h
src/SINDYc/: ensembles.h  models.cpp  sindy.cpp  spaces.h  variables.h
src/capi/: rope.cpp
src/cli/: main.cpp
src/client/: base64.h  client.cpp
src/core/: version.cpp
src/core/platform/: posix.cpp  windows.cpp
src/forecast/: dynamic_rollout.h  latent_decoder.h  libtorch_model.h  meta_model.h  model_factory.h  model_interface.h  onnx_model.h  pipeline.cpp  sequence_builder.h
src/interpolate/: grid_interpolator.cpp
src/io/: config_reader.cpp  csv_reader.cpp  driver_bin.cpp  driver_cache.cpp  driver_config.cpp  driver_db.cpp  ic_bin.cpp  ic_config.cpp  ic_table.cpp
src/models/: ensembles.cpp  features.cpp  features.h  models.cpp  models.h  sindy.cpp  sindy.h
src/pca/: pca.cpp
src/server/: base64_enc.h  server.cpp
src/sindy/: _bkp_features.cpp  a.out  features.cpp  features.h  test  test.cpp  values.cpp
src/tests/: test.cpp
test/: a.out  btest.cpp  stringsplitter.cpp  test.cpp  test.out  test.txt
tests/: gen_decoder_pt.cpp  gen_fixtures.py
tests/cpp/: CMakeLists.txt  test_config_reader.cpp  test_csv_reader.cpp  test_datetime.cpp  test_driver_cache.cpp  test_driver_db.cpp  test_ic_table.cpp  test_interpolator.cpp  test_pipeline.cpp  test_version.cpp
tests/cpp/fixtures/: sample.csv
tests/dotnet/: IntegrationTests.cs  RopeExceptionTests.cs  RopeTests.csproj
tests/dotnet/PackSmokeConsumer/: PackSmokeConsumer.csproj  Program.cs
tests/fixtures/: ic_test.csv  sw_test.csv
tests/fixtures/test_models/: .gitignore  base_model_00.onnx  base_model_01.onnx  base_model_02.onnx  base_model_03.onnx  base_model_04.onnx  base_model_05.onnx  base_model_06.onnx  base_model_07.onnx  base_model_08.onnx  base_model_09.onnx  base_model_10.onnx  base_model_11.onnx  base_model_12.onnx  base_model_13.onnx  base_model_14.onnx  coae_decoder.onnx  ic_table.icbin  meta_model.onnx  sw_test.swbin
tests/python/: test_cli.py  test_helpers.py
