[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sww26-demo"
version = "0.1.0"
description = "Orbital propagation and perturbation analysis with USSA76 and NRLMSIS-2.1 drag models."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Sriram Narayanan", email = "sriram.narayanan@mail.wvu.edu" },
{name = "Violet Player", email = "violet.player@noaa.gov"}]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "pymsis",
    "rope-framework @ file://../python",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["demo_lib"]
